index: make canvas take screen vertical space

--- a/literallycanvas/index.html
+++ b/literallycanvas/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- where the widget goes. you can do CSS to it. -->
-    <div class="literally" style="min-height:750px"></div>
+    <div class="literally" style="min-height:98vh"></div>
 
     <!-- kick it off -->
     <script>
