literallycanvas: vendor js dependencies

--- a/literallycanvas/index.html
+++ b/literallycanvas/index.html
@@ -3,9 +3,9 @@
     <!-- stylesheet -->
     <link href="css/literallycanvas.css" rel="stylesheet">
 
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <!-- dependency: React.js -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.js"></script>
+    <script src="js/react-with-addons.js"></script>
 
     <!-- Literally Canvas -->
     <script src="js/literallycanvas.js"></script>
